# synth-attest

./: .gitignore  README.md  _arxiv_probe.txt  pyproject.toml
.github/workflows/: ci.yml
demo/: end_to_end.py
paper/: .gitignore  synth-attest.tex
specs/001/: CITATIONS_VERIFIED.md  COST_MODEL.md  IMPLEMENTATION_CROSSCHECK.md  PANEL_REPORT_AND_GRANT.md  PERSONAS.md  PLAN_VS_REALITY.md  POC.md  REGULATORY_MAPPING.md  S3_ANCHOR_PROOF.md  spec.md  verify_citations.py  verify_semanticscholar.py
src/synth_attest/: __init__.py  adapters.py  anchor.py  audit.py  custody.py  engine.py  schemas.py
tests/: test_anchor.py  test_audit_and_adapters.py  test_contracts.py  test_custody.py  test_hardening.py  test_presentation.py  test_regulatory_traceability.py
